--- a/index.html
+++ b/index.html
@@ -2,10 +2,36 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Karma</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<nav class="top-navigation">
+	<div class="content">
+		<img class="logo" src="karma-logo.svg" alt="Karma logo" width="26">
+	<ul class="navbar">
+		<li id ="firstLink">Meet Karma</li>
+		<li>How It Works</li>
+		<li>Store</li>
+		<li>Blog</li>
+		<li>Help</li>
+		<li>Login</li>
+	</ul>
+</div>
+</nav>
+<section class="frontPage">
+
+</section>
 	
+
+
+	<footer>
+		<h3>Join us on</h3>
+		<ul>
+			<img src=>
+			<img src=>
+			<p> C Karma Mobility Inc.</p>
+	</footer>
 </body>
 </html>
