--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<title>Karma</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
 <nav class="top-navigation">
 	<div class="content">
+		<ul class="navbar">
+			<li id ="active">Meet Karma</li>
+			<li>How It Works</li>
+			<li>Store</li>
+			<li>Blog</li>
+			<li>Help</li>
+			<li>Login</li>
+		</ul>
 		<img class="logo" src="karma-logo.svg" alt="Karma logo" width="26">
-	<ul class="navbar">
-		<li id ="firstLink">Meet Karma</li>
-		<li>How It Works</li>
-		<li>Store</li>
-		<li>Blog</li>
-		<li>Help</li>
-		<li>Login</li>
-	</ul>
-</div>
+	</div>
 </nav>
-<section class="frontPage">
 
+<section class="frontPage">
+	<h1> Introducing Karma</h1>
+	<h3>Bring WiFi with you, everywhere you go.</h3>
+<div class="learnMore">
+<button>Learn More</button>
+</div>
 </section>
 	
 
