button and text style update

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 </nav>
 
 <section class="frontPage">
+	<div class="content">
 	<h1> Introducing Karma</h1>
+	</div>
 	<h3>Bring WiFi with you, everywhere you go.</h3>
 <div class="learnMore">
 <button>Learn More</button>
 </div>
 </section>
-	
 
 
 	<footer>
