--- a/index.html
+++ b/index.html
@@ -19,18 +19,34 @@
 			<li>Help</li>
 			<li>Login</li>
 		</ul>
-		<img class="logo" src="karma-logo.svg" alt="Karma logo" width="26">
+		<img id="logo" src="karma-logo.svg" alt="Karma logo" width="26">
 	</div>
 </nav>
 
 <section class="frontPage">
 	<div class="content">
-	<h1> Introducing Karma</h1>
+	<h1 id="intro"> Introducing Karma</h1>
 	</div>
 	<h3>Bring WiFi with you, everywhere you go.</h3>
 <div class="learnMore">
 <button>Learn More</button>
 </div>
+</section>
+
+<section class="cases">
+	<h1> Everyone needs a little Karma. </h1>
+	<div class="devices"
+		><img class="pageImage" src="icon-devices.svg" alt="devices graphic" width="127" height="127"> 
+		<h3>Internet for all devices</h3>
+		</div>
+		<div class="devices">
+		<img class="pageImage" src="icon-coffee.svg" alt="coffee graphic" width="127" height="127">
+		<h3>Boost your productivity</h3>
+		</div>
+		<div>
+		<img class="devices" src="icon-refill.svg" alt="refill pump graphic" width="127" height="127">
+		<h3>Pay as You Go</h3>
+		</div>
 </section>
 
 
