--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,16 +36,16 @@
 
 <section class="cases">
 	<h1> Everyone needs a little Karma. </h1>
-	<div class="devices"
-		><img class="pageImage" src="icon-devices.svg" alt="devices graphic" width="127" height="127"> 
+	<div class="devices">
+		<img class="pageImage" src="icon-devices.svg" alt="devices graphic" width="127" height="127"> 
 		<h3>Internet for all devices</h3>
 		</div>
 		<div class="devices">
 		<img class="pageImage" src="icon-coffee.svg" alt="coffee graphic" width="127" height="127">
 		<h3>Boost your productivity</h3>
 		</div>
-		<div>
-		<img class="devices" src="icon-refill.svg" alt="refill pump graphic" width="127" height="127">
+		<div class="devices">
+		<img class="pageImage" src="icon-refill.svg" alt="refill pump graphic" width="127" height="127">
 		<h3>Pay as You Go</h3>
 		</div>
 </section>
@@ -52,10 +53,12 @@
 
 	<footer>
 		<h3>Join us on</h3>
-		<ul>
-			<img src=>
-			<img src=>
-			<p> C Karma Mobility Inc.</p>
+		<ul class="social">
+			<li><i class="fa fa-twitter"></i></li>
+			<li><i class="fa fa-facebook"></i></li>
+			<li><i class="fa fa-instagram"></i></li>
+		</ul>
+		<p><i class="fa fa-copyright"></i>Karma Mobility, Inc.</p>
 	</footer>
 </body>
 </html>
