--- a/index.html
+++ b/index.html
@@ -49,16 +49,14 @@
 		<h3>Pay as You Go</h3>
 		</div>
 </section>
-
-
 	<footer>
 		<h3>Join us on</h3>
 		<ul class="social">
-			<li><i class="fa fa-twitter"></i></li>
-			<li><i class="fa fa-facebook"></i></li>
-			<li><i class="fa fa-instagram"></i></li>
+			<li class="twittercircle"><i class="fa fa-twitter"></i></li>
+			<li class="facebookcircle"><i class="fa fa-facebook"></i></li>
+			<li class="instacircle"><i class="fa fa-instagram"></i></li>
 		</ul>
-		<p><i class="fa fa-copyright"></i>Karma Mobility, Inc.</p>
+		<p>&#169; Karma Mobility, Inc.</p>
 	</footer>
 </body>
 </html>
