first final draft

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 </head>
 
 <body>
@@ -49,8 +50,9 @@
 		<h3>Pay as You Go</h3>
 		</div>
 </section>
-	<footer>
-		<h3>Join us on</h3>
+
+<footer>
+	<h3>Join us on</h3>
 		<ul class="social">
 			<li class="twittercircle"><i class="fa fa-twitter"></i></li>
 			<li class="facebookcircle"><i class="fa fa-facebook"></i></li>
